--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@abramstyle/redux-api": "^0.1.7",
+    "babel-plugin-react-css-modules": "^3.3.3",
     "babel-register": "^6.26.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
@@ -28,12 +29,12 @@
     "koa-router": "^7.4.0",
     "koa-views": "^6.1.4",
     "normalize.css": "^7.0.0",
+    "postcss": "^6.0.19",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-css-modules": "^4.7.1",
     "react-dom": "^16.2.0",
-    "react-hot-loader": "3.1.3",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
@@ -64,6 +65,7 @@
     "precss": "^2.0.0",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
+    "react-hot-loader": "^4.0.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   }
