--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa-favicon": "^2.0.0",
     "koa-logger": "^3.1.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^4.0.2",
     "koa-views": "^6.1.4",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
