feat: run app use a single command

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "webpack-log": "^1.1.2",
     "yargs": "^11.0.0"
   },
   "devDependencies": {
