--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/abramstyle/cybertron",
   "author": "Abram.Zhao <abram.zhao@dji.com>",
   "scripts": {
-    "dev": "NODE_ENV=development node ./modules/cybertron",
+    "dev": "NODE_ENV=development ./modules/cybertron/.bin/cli.js start --config ./config/cybertron.config.js",
     "prod": "NODE_ENV=production node ./modules/cybertron",
     "server": "NODE_ENV=development nodemon server",
     "build:server": "webpack --config config/webpack/server.config.js --watch --env=development --progress --colors"
