--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-to-koa": "^1.0.6",
     "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
+    "keon": "^0.1.2",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-favicon": "^2.0.0",
