--- a/.eslintrc
+++ b/.eslintrc
@@ -44,7 +44,7 @@
   "settings": {
     "import/resolver": {
       "webpack": {
-        "config": "config/webpack/development.config.js"
+        "config": "./config/webpack.resolve.js"
       }
     }
   },
