--- a/.eslintrc
+++ b/.eslintrc
@@ -38,7 +38,20 @@
     "import/prefer-default-export": 0,
     "import/no-dynamic-require": 0,
     "react/prefer-stateless-function": [1,{"ignorePureComponents": true}],
-    "no-underscore-dangle": ["error", { "allow": ["__DEV__", "__PROD__", "__RELEASE__", "__STAGING__", "__PRELOADED_STATE__"] }],
+    "no-underscore-dangle": [
+      "error",
+      {
+        "allow": [
+          "__DEV__",
+          "__PROD__",
+          "__RELEASE__",
+          "__STAGING__",
+          "__IS_SERVER__",
+          "__PRELOADED_STATE__",
+          "__SSR__"
+        ]
+      }
+    ],
     "react/no-did-mount-set-state":0
   },
   "settings": {
@@ -59,6 +72,8 @@
     "__PROD__": true,
     "__RELEASE__": true,
     "__STAGING__": true,
+    "__IS_SERVER__": true,
     "__PRELOADED_STATE__": true,
+    "__SSR__": true
   }
 }
