--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "immutable": "^3.8.2",
     "ionicons": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
-    "kaonjs": "^0.6.3-rc1",
+    "kaonjs": "^0.7.0-alpha-2",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-favicon": "^2.0.0",
@@ -39,7 +39,6 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
-    "react-loadable": "^5.3.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
