--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,8 @@
   ],
   "plugins": [
     "transform-runtime",
-    "react-loadable/babel",
+    "loadable-components/babel",
+    "syntax-dynamic-import",
     ["react-css-modules", {
       "generateScopedName": "[name]__[local]___[hash:base64:5]"
     }],
