--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Abramstyle <abram.style@gmail.com>",
   "scripts": {
     "dev": "NODE_ENV=development kaon start",
-    "server": "NODE_ENV=production kaon start --config ./config/kaon.config.js",
+    "prod": "NODE_ENV=production kaon start --config ./config/kaon.config.js",
+    "server": "NODE_ENV=development kaon start --only-server",
     "build": "NODE_ENV=production kaon build --config ./config/kaon.config.js",
     "db": "json-server ./db/routes.js --port 1090"
   },
@@ -60,7 +61,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "faker": "^4.1.0",
     "json-server": "^0.12.1",
-    "react-hot-loader": "^4.3.3",
+    "react-hot-loader": "^4.3.4",
     "webpack-bundle-analyzer": "^2.11.1"
   }
 }
