--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "immutable": "^3.8.2",
     "ionicons": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
-    "kaonjs": "^1.3.17",
+    "kaonjs": "^2.0.0-alpha-2",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-favicon": "^2.0.0",
@@ -47,6 +47,7 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "autoprefixer": "^9.0.1",
     "babel-eslint": "^8.2.2",
     "babel-plugin-dual-import": "^1.2.1",
     "eslint": "^4.9.0",
@@ -61,6 +62,9 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "faker": "^4.1.0",
     "json-server": "^0.12.1",
+    "mini-css-extract-plugin": "^0.4.1",
+    "postcss-import": "^11.1.0",
+    "precss": "^3.1.2",
     "react-hot-loader": "^4.3.4",
     "webpack-bundle-analyzer": "^2.11.1"
   }
