feat: add working example

--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
   "dependencies": {
     "@abramstyle/redux-api": "^0.1.11",
     "@abramstyle/utils": "^0.8.13",
+    "@loadable/babel-plugin": "^5.0.1",
+    "@loadable/component": "^5.2.1",
     "bluebird": "^3.5.1",
     "classnames": "^2.2.5",
-    "css-modules-require-hook": "^4.2.3",
     "dotenv": "^4.0.0",
     "express-to-koa": "^1.0.6",
     "font-awesome": "^4.7.0",
     "immutable": "^3.8.2",
     "ionicons": "^3.0.0",
     "isomorphic-fetch": "^2.2.1",
-    "kaonjs": "2.1.0",
+    "kaonjs": "^2.1.4",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-favicon": "^2.0.0",
@@ -33,7 +34,6 @@
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.4",
-    "loadable-components": "^2.2.2",
     "mobile-detect": "^1.4.1",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
@@ -49,7 +49,6 @@
   "devDependencies": {
     "autoprefixer": "^9.0.1",
     "babel-eslint": "^8.2.2",
-    "babel-plugin-dual-import": "^1.2.1",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
